# FBoW

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cmake_uninstall.cmake.in  config.cmake.in
include/fbow/: bow_feat_vector.h  bow_vector.h  cpu.h  fbow.h  type.h  vocabulary.h
src/: CMakeLists.txt  cpu.h  fbow.cpp  fbow_exports.h  vocabulary_creator.cpp  vocabulary_creator.h
tests/: CMakeLists.txt  fbow_test_cpu.cpp
utils/: CMakeLists.txt  cmd_line_parser.h  dir_reader.h  fbow_create_vocabulary.cpp  fbow_dump_features.cpp  fbow_transform.cpp
